--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,9 +1,25 @@
-#运行环境
+#\u5F00\u53D1\u73AF\u5883
 spring.profiles.active=@system.env@
-#database参数
-spring.datasource.url=@db.url@
-spring.datasource.username=@db.username@
-spring.datasource.password=@db.password@
-spring.datasource.driver-class-name=@db.driver@
-#loging参数
-loging
+#database\u914D\u7F6E
+#spring.datasource.url=@db.url@
+#spring.datasource.username=@db.username@
+#spring.datasource.password=@db.password@
+#spring.datasource.driver-class-name=@db.driver@
+spring.datasource.url=jdbc:mysql://localhost:3306/school?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#loging\u914D\u7F6E
+#\u6307\u5B9A\u914D\u7F6E\u6587\u4EF6
+#logging.config=classpath:logback-@system.env@.xml
+#\u6307\u5B9A\u65E5\u5FD7\u8F93\u51FA\u7684class\u5305
+logging.level.com.tang.*=info
+#\u6253\u5370\u7CFB\u7EDF\u5185\u90E8\u65E5\u5FD7
+#debug=true
+#\u6307\u5B9A\u65E5\u5FD7\u6587\u4EF6\u540D\u548C\u5176\u8DEF\u5F84
+logging.file=logs/logininfo.log
+#\u6307\u5B9A\u65E5\u5FD7\u6587\u4EF6\u7684\u8DEF\u5F84\uFF0C\u9ED8\u8BA4\u6587\u4EF6\u540Dspring.log\uFF08\u4E0D\u80FD\u4E0Elogging.file\u540C\u65F6\u51FA\u73B0\uFF09
+#logging.path=/logs
+#redis\u914D\u7F6E
+#\u6307\u5B9A\u6CE8\u89E3\u7F13\u5B58\uFF0C\u5426\u5219@cacheable\u6CE8\u89E3\u4E0D\u751F\u6548
+spring.cache.type=redis
