--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,43 @@
     </properties>
 
     <dependencies>
+        <!-- Spring Boot Redis依赖 -->
+        <!-- 注意：1.5版本的依赖和2.0的依赖不一样，注意看哦 1.5我记得名字里面应该没有“data”, 2.0必须是“spring-boot-starter-data-redis” 这个才行-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <!-- 1.5的版本默认采用的连接池技术是jedis  2.0以上版本默认连接池是lettuce, 在这里采用jedis，所以需要排除lettuce的jar -->
+            <exclusions>
+                <exclusion>
+                    <groupId>redis.clients</groupId>
+                    <artifactId>jedis</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.lettuce</groupId>
+                    <artifactId>lettuce-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- 添加jedis客户端 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <!--spring2.0集成redis所需common-pool2-->
+        <!-- 必须加上，jedis依赖此  -->
+        <!-- spring boot 2.0 的操作手册有标注 大家可以去看看 地址是：https://docs.spring.io/spring-boot/docs/2.0.3.RELEASE/reference/htmlsingle/-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+        <!-- 将作为Redis对象序列化器 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,8 +96,113 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <!--多环境配置-->
+    <profiles>
+        <!--本地环境-->
+        <profile>
+            <id>dev</id>
+            <!--配置-->
+            <properties>
+                <!--指定devlop.properties-->
+                <build.env>devlop</build.env>
+            </properties>
+            <!--激活方式1：默认激活-->
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!--测试环境-->
+        <profile>
+            <id>test</id>
+            <properties>
+                <!--指定test.properties-->
+                <build.env>test</build.env>
+            </properties>
+        </profile>
+        <!--预发布环境-->
+        <profile>
+            <id>pre</id>
+            <properties>
+                <!--指定pre.properties-->
+                <build.env>pre</build.env>
+            </properties>
+        </profile>
+        <!--生产环境-->
+        <profile>
+            <id>prod</id>
+            <properties>
+                <!--指定produ.properties-->
+                <build.env>produ</build.env>
+            </properties>
+        </profile>
+        <!-- demo环境 -->
+        <profile>
+            <id>demo</id>
+            <properties>
+                <!--指定demo.properties-->
+                <build.env>demo</build.env>
+            </properties>
+        </profile>
 
+        <!--激活方式2：根据jdk环境激活-->
+        <profile>
+            <id>profileTest1</id>
+
+        </profile>
+        <!--激活方式3：根据操作系统激活-->
+        <profile>
+            <id>profileTest2</id>
+            <properties>
+                <!--指定test.properties-->
+                <build.env>test</build.env>
+            </properties>
+            <activation>
+                <os>
+                    <name>Windows 10</name>
+                    <family>Windows</family>
+                    <arch>x64</arch>
+                    <!--<version>5.1.2600</version>-->
+                </os>
+            </activation>
+        </profile>
+        <!--激活方式4：根据文件是否存在激活-->
+        <profile>
+            <id>profileTest3</id>
+            <properties>
+                <!--指定test.properties-->
+                <build.env>test</build.env>
+            </properties>
+            <activation>
+                <file>
+                    <exists>m</exists>
+                    <!--<missing>dev.properties</missing>-->
+                </file>
+            </activation>
+        </profile>
+    </profiles>
     <build>
+        <filters> <!-- 指定使用的 filter  .${build.env}为已激活的profiles-->
+            <filter>filters/${build.env}.properties</filter>
+        </filters>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>logback-*.xml</exclude>
+                    <exclude>application*.properties</exclude>
+                    <exclude>generatorConfig.xml</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!--生效的resourse-->
+                <filtering>true</filtering>
+                <includes>
+                    <include>application.properties</include>
+                    <!--<include>logback-${build.env}.xml</include>-->
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -71,5 +210,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
