--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,3 +1,5 @@
+#\u914D\u7F6E\u95EE\u9898\uFF1A1\uFF0C\u5360\u4F4D\u7B26\u8C03\u7528\u5916\u90E8\u5C5E\u6027\u5931\u8D25
+#        2\uFF0C@cacheable\u65E0\u6548
 #\u5F00\u53D1\u73AF\u5883
 spring.profiles.active=@system.env@
 #database\u914D\u7F6E
@@ -9,6 +11,20 @@ spring.datasource.url=jdbc:mysql://localhost:3306/school?useUnicode=true&charact
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# \u4F7F\u7528druid\u6570\u636E\u6E90
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+## \u8BE5\u914D\u7F6E\u8282\u70B9\u4E3A\u72EC\u7ACB\u7684\u8282\u70B9\uFF0C\u6709\u5F88\u591A\u540C\u5B66\u5BB9\u6613\u5C06\u8FD9\u4E2A\u914D\u7F6E\u653E\u5728spring\u7684\u8282\u70B9\u4E0B\uFF0C\u5BFC\u81F4\u914D\u7F6E\u65E0\u6CD5\u88AB\u8BC6\u522B
+#\u6CE8\u610F\uFF1A\u4E00\u5B9A\u8981\u5BF9\u5E94mapper\u6620\u5C04xml\u6587\u4EF6\u7684\u6240\u5728\u8DEF\u5F84
+mybatis.mapper-locations=classpath:**.mapping.*Mapper.xml
+# \u6CE8\u610F\uFF1A\u5BF9\u5E94\u5B9E\u4F53\u7C7B\u7684\u8DEF\u5F84
+mybatis.type-aliases-package=com.tang.studydemo.**.model
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+pagehelper.returnPageInfo=check
 #loging\u914D\u7F6E
 #\u6307\u5B9A\u914D\u7F6E\u6587\u4EF6
 #logging.config=classpath:logback-@system.env@.xml
@@ -23,3 +39,5 @@ logging.file=logs/logininfo.log
 #redis\u914D\u7F6E
 #\u6307\u5B9A\u6CE8\u89E3\u7F13\u5B58\uFF0C\u5426\u5219@cacheable\u6CE8\u89E3\u4E0D\u751F\u6548
 spring.cache.type=redis
+#\u9879\u76EE\u540D
+server.servlet.context-path=/studyDemo
